--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html,body{
     height: 100%;
 }
 #back {
-    width: 110px;
-    height: 110px;
+    width: 100%;
+    height: 100px;
     background-color: red;
 }
